RIPPLE - Enclosed it within a container to avoid 'overflow:hidden' dependency on parent. BUTTON - Removed overflow property.

--- a/scss/_ripple.scss
+++ b/scss/_ripple.scss
@@ -1,3 +1,15 @@
+.m-ripple-container {
+  position: absolute;
+  display: block;
+  pointer-events: none;
+  overflow: hidden;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  border-radius: inherit;
+}
+
 .m-ripple {
   position: absolute;
   display: block;
